Package_Tools/include-C/flint/in_arbeit/h/arb.h

int arb_overlaps(const arb_t x, const arb_t y);
int arb_contains(const arb_t x, const arb_t y);
int arb_contains_interior(const arb_t x, const arb_t y);
int arb_contains_int(const arb_t x);
void arb_get_interval_fmpz_2exp(fmpz_t a, fmpz_t b, fmpz_t exp, const arb_t x);
int arb_get_unique_fmpz(fmpz_t z, const arb_t x);
void arb_get_fmpz_mid_rad_10exp(fmpz_t mid, fmpz_t rad, fmpz_t exp, const arb_t x, slong n);
void arb_floor(arb_t z, const arb_t x, slong prec);
void arb_ceil(arb_t z, const arb_t x, slong prec);
void arb_nint(arb_t res, const arb_t x, slong prec);
void arb_trunc(arb_t res, const arb_t x, slong prec);
void arb_set_interval_arf(arb_t x, const arf_t a, const arf_t b, slong prec);
void arb_set_interval_mpfr(arb_t x, const mpfr_t a, const mpfr_t b, slong prec);
void arb_get_interval_arf(arf_t a, arf_t b, const arb_t x, slong prec);
void arb_get_interval_mpfr(mpfr_t a, mpfr_t b, const arb_t x);
void arb_set_interval_mag(arb_t res, const mag_t a, const mag_t b, slong prec);
void arb_set_interval_neg_pos_mag(arb_t res, const mag_t a, const mag_t b, slong prec);
void arb_union(arb_t z, const arb_t x, const arb_t y, slong prec);
int arb_intersection(arb_t z, const arb_t x, const arb_t y, slong prec);
void arb_get_rand_fmpq(fmpq_t q, flint_rand_t state, const arb_t x, slong bits);
void arb_min(arb_t z, const arb_t x, const arb_t y, slong prec);
void arb_max(arb_t z, const arb_t x, const arb_t y, slong prec);
void arb_minmax(arb_t z1, arb_t z2, const arb_t x, const arb_t y, slong prec);
int arb_can_round_arf(const arb_t x, slong prec, arf_rnd_t rnd);
int arb_can_round_mpfr(const arb_t x, slong prec, mpfr_rnd_t rnd);