Package_Tools/include-C/flint/in_arbeit/pp/arb.pp


function arb_overlaps(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_contains(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_contains_interior(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_contains_int(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
procedure arb_get_interval_fmpz_2exp(a:Tfmpz_t; b:Tfmpz_t; exp:Tfmpz_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
function arb_get_unique_fmpz(z:Tfmpz_t; x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
procedure arb_get_fmpz_mid_rad_10exp(mid:Tfmpz_t; rad:Tfmpz_t; exp:Tfmpz_t; x:Tarb_t; n:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_floor(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_ceil(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_nint(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_trunc(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_set_interval_arf(x:Tarb_t; a:Tarf_t; b:Tarf_t; prec:Tslong);cdecl;external;
{$ifdef __MPFR_H}
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_set_interval_mpfr(x:Tarb_t; a:Tmpfr_t; b:Tmpfr_t; prec:Tslong);cdecl;external;
{$endif}
(* Const before type ignored *)

procedure arb_get_interval_arf(a:Tarf_t; b:Tarf_t; x:Tarb_t; prec:Tslong);cdecl;external;
{$ifdef __MPFR_H}
(* Const before type ignored *)
procedure arb_get_interval_mpfr(a:Tmpfr_t; b:Tmpfr_t; x:Tarb_t);cdecl;external;
{$endif}
(* Const before type ignored *)
(* Const before type ignored *)

procedure arb_set_interval_mag(res:Tarb_t; a:Tmag_t; b:Tmag_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_set_interval_neg_pos_mag(res:Tarb_t; a:Tmag_t; b:Tmag_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_union(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_intersection(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong):longint;cdecl;external;
(* Const before type ignored *)
procedure arb_get_rand_fmpq(q:Tfmpq_t; state:Tflint_rand_t; x:Tarb_t; bits:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_min(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_max(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_minmax(z1:Tarb_t; z2:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
function arb_can_round_arf(x:Tarb_t; prec:Tslong; rnd:Tarf_rnd_t):longint;cdecl;external;
{$ifdef __MPFR_H}
(* Const before type ignored *)
function arb_can_round_mpfr(x:Tarb_t; prec:Tslong; rnd:Tmpfr_rnd_t):longint;cdecl;external;
{$endif}
(* Const before type ignored *)
(* Const before type ignored *)
